2004-12-02  Jackson Harper  <jackson@ximian.com>

	* FieldDef.cs: Set the underlying type for data constants. This
	fixes bug #70153.

2004-08-01  Atsushi Enomoto  <atsushi@ximian.com>

	* DebuggingInfo.cs : csc build fix (see bug #62230).

2004-07-27  Martin Baulig  <martin@ximian.com>

	* IInstr.cs (IInstr): Made this an abstract class and not an
	interface, added a .ctor which takes a Location.
	(IInstr.Location): New public readonly field.

	* CodeGen.cs (CodeGen.SymbolWriter): New public property.
	(CodeGen.BeginSourceFile, EndSourceFile): New public methods.
	(CodeGen.EndMethodDef): Take a `Location' argument.
	(CodeGen.Write): Create debugging info if the user requested it.

	* MethodDef.cs (MethodDef.ctor): Added `CodeGen codegen' and
	`Location start' arguments.  If the user requested debugging
	information, register ourselves with the symbol writer.
	(MethodDef.WriteCode): Emit debugging information.

	* DebuggingInfo.cs: New file.

2004-07-23  Jackson Harper  <jackson@ximian.com>

	* MethodDef.cs: Params are 1 based if the method is instance
	because of the 'this' arg.
	
2004-07-21  Jackson Harper  <jackson@ximian.com>

	* ExternTypeRefInst.cs: Use the PeapiType so that modified types
	will actually work. Add a Clone method so that type ref insts
	aren't duplicated making them modified multiple times.
	
2004-07-12  Jackson Harper  <jackson@ximian.com>

	* MethodDef.cs: Local lists are not lazyily allocated so they were
	getting added to every method. This is legal but wastes space.

2004-07-08  Jackson Harper  <jackson@ximian.com>

	* CodeGen.cs: Add assembly custom attributes to the pe file.
	* CustomAttr.cs: Custom attributes are now added through the
	pefile, this ensures that they get emitted properly.
	* ExternTable.cs: Allow adding custom attributes to assembly
	refs.
	
2004-06-26  Jackson Harper  <jackson@ximian.com>

	* TypeDef.cs: Preserve the order of fields in a class. Then after